# SDF-LightMap

./: CMakeLists.txt  CleanProjectFiles.bat  GenerateProjectFiles.bat  README.md
SDFGenerator/: CMakeLists.txt  main.cpp  original.cpp  original.h  sdf.h
